--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -40,8 +40,8 @@ tr:nth-child(even) {
 .carousel-custom .item img {
 	// opacity:0.7;
 	height:300px;
-	margin: auto;
 	width:50%;
+  margin: auto;
 }
 
 .pretty-input::-webkit-file-upload-button {
@@ -63,397 +63,45 @@ tr:nth-child(even) {
        -webkit-user-select: none;
        cursor: pointer;
      }
-// <html>
-// <head>
-//   <meta charset="UTF-8">
-//   <title>Eventos de emprendimiento</title>
-//   <!-- Latest compiled and minified CSS -->
-// <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-// <!-- Optional theme -->
-// <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-// <!-- Latest compiled and minified JavaScript -->
-// <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-//   <link rel="stylesheet" href="assets/stylesheets/welcome.scss">
-//   <link rel="stylesheet" href="assets/stylesheets/application.scss">
-
-//   <meta name="viewport" content="width=device-width, initial-scale=1">
-//   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-//   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-//   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-// </head>
-// <body>
-
-// <nav class="navbar navbar-custom navbar-fixed-top ">
-//   <div class="container-fluid ">
-//     <div class="row">
-//       <div class="col-xs-offset-5 col-xs-7 col-sm-6 col-sm-offset-6 col-md-offset-6 col-md-6 col-lg-offset-7 col-lg-5">
-//       <!-- inicio del if -->
-//       <span>
-//       </span>
-//           <% if !user_signed_in?  %>
-//             <%= link_to 'Iniciar sesion', new_user_session_path, class: 'btn btn-info'  %>
-//             <%= link_to 'Registrarse', new_user_registration_path, class: 'btn btn-info' %>
-//             <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-info' %>
-//           <% else %>
-//             <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
-//               <a href=/categories class="btn btn-info">Hi, <%= current_user.name %></a>
-//               <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
-//               <%= link_to 'Publicar', new_category_path, class: 'btn btn-success' %>
-//               <%= link_to 'Administrador', categories_path, class: 'btn btn-primary'%>
-//             <% else %>
-//               <a href=/categories class="btn btn-info">Hi, <%= current_user.name %></a>
-//               <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
-//               <%= link_to 'Publicar', new_category_path, class: 'btn btn-success' %>
-//             <% end %>  
-//           <% end %>  
-//       <!-- fin del if  -->
-//       </div>
-//     </div>
-//   </div>
-// </nav>
-// <br/>
-
-// <hr />
-// <div class="container">
-//   <div class="row">
-//     <di class="col-lg-offset-10 col-lg-2">
-      
-//     <div class="dropdown">
-//       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Buscar
-//         <span class="caret"></span>
-//       </button>
-//       <ul class="dropdown-menu">
-//         <li>
-//           <a href=/welcome/index?buscar=dia>
-//             <span>Hoy</span> 
-//           </a>
-//         </li>
-//         <li>
-//           <a href=/welcome/index?buscar=manana>
-//             <span>Mañana</span> 
-//           </a>
-//         </li>
-//         <li>
-//           <a href=/welcome/index?buscar=semana>
-//             <span>Semana</span> 
-//           </a>
-//         </li>
-//         <li>
-//           <a href=/welcome/index?buscar=mes>
-//             <span>Mes</span> 
-//           </a>
-//         </li>
-//       </ul>
-//       </di>
-//     </div>
-//   </div>
-// </div>
-
-// <hr />
-
-// <% if @categories_carousel.first != nil %>
-//     <div class="container-fluid">
-//       <div class="row"> 
-//         <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
-//       <!-- Indicators -->
-//           <ol class="carousel-indicators">
-//             <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
-//                 <span class="glyphicon glyphicon-apple"></span> 
-//             </li>
-//             <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
-//                 <span class="glyphicon glyphicon-apple"></span>  
-//             </li>
-//             <li data-target="#carousel-example-generic" data-slide-to="2" >
-//                 <span class="glyphicon glyphicon-apple"></span>  
-//             </li>
-//           </ol>
-//             <!-- Wrapper for slides -->
-//           <div class="carousel-inner" role="listbox">
-//             <div class="item active">
-//                 <%= image_tag(@categories_carousel.first.avatar1.url, class: "img-peq") %>  
-//             </div>
-//             <div class="item">
-//                 <%= image_tag(@categories_carousel.first.avatar2.url, class: "img-peq") %> 
-//             </div>
-//             <div class="item">
-//                 <%= image_tag(@categories_carousel.first.avatar3.url, class: "img-peq") %>   
-//           </div>
-//         </div>
-//       <!-- Controls -->
-//           <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-//             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-//             <span class="sr-only">Previous</span>
-//           </a>
-//           <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-//             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-//             <span class="sr-only">Next</span>
-//           </a>
-//     </div>
-//       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-//       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-//       <!-- Include all compiled plugins (below), or include individual files as needed -->
-//       <script src="js/bootstrap.min.js"></script> 
-//     </div>
-//   </div>
-// <% else %>
-
-//   <h1 class="text-center">Bienvenido! </h1>
-//   <div class="container-fluid">
-//       <div class="row"> 
-//         <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
-//       <!-- Indicators -->
-//           <ol class="carousel-indicators">
-//             <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
-//                 <%= image_tag('bombillo.png') %> 
-//             </li>
-//             <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
-//                 <%= image_tag('bombillo.png') %> 
-//             </li>
-//             <li data-target="#carousel-example-generic" data-slide-to="2" >
-//                 <%= image_tag('bombillo.png') %> 
-//             </li>
-//           </ol>
-//             <!-- Wrapper for slides -->
-//           <div class="carousel-inner" role="listbox">
-//             <div class="item active">
-//                 <%= image_tag('bombillo.png') %> 
-//             </div>
-//             <div class="item">
-//                 <%= image_tag('bombillo.png') %> 
-//             </div>
-//             <div class="item">
-//                 <%= image_tag('bombillo.png') %> 
-//           </div>
-//         </div>
-//    </div>
-//       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-//       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-//       <!-- Include all compiled plugins (below), or include individual files as needed -->
-//       <script src="js/bootstrap.min.js"></script> 
-//     </div>
-//   </div>
-//   <% end %>
-
-//  <% if @categories_evento.first != nil %>
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-//   <div class="container-fluid ">
-//     <h1>Eventos</h1>
-//     <div class="row">
-//       <div class="col-md-12">
-//         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
-//           <div class="carousel-inner">
-//                 <div class="container-fluid">
-//                   <div class="row">
-//                     <% @categories_evento.first(6).each do |e|%>
-//                       <% if user_signed_in? %>
-//                         <% @mylink = "/categories/" + e.id.to_s %>
-//                       <% else %>
-//                         <% @mylink = "/categories1/" + e.id.to_s %>
-//                       <% end %><!-- cierre de if -->
-                        
-//                       <div class="col-sm-3">
-//             <div class="item ">
-//                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-//                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-//                           </a>
-//               </div><!-- cierre de item -->
-//                       </div>
-//                     <% end %> <!-- cierre de each-do -->
-//                   </div>
-//                   </div><!-- row -->
-//                 </div><!-- container-fluid -->
-//             </div><!-- cierre de carousel-inner -->
-
-
-
-//          <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-//          <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-//           </div><!-- cierre de carousel -->
-//         </div><!-- cierre de col -->
-//       </div><!-- cierre de row -->
-//     </div><!-- cierre de container -->
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-// <% end %>
-// <% if @categories_foro.first != nil %>
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-//   <div class="container">
-//     <h1>Foros</h1>
-//     <div class="row">
-//       <div class="col-md-12">
-//         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
-//           <div class="carousel-inner">
-//             <div class="item active">
-//               <div class="item">
-//                 <div class="container-fluid">
-//                   <div class="row">
-//                     <% @categories_foro.first(6).each do |e|%>
-//                       <% if user_signed_in? %>
-//                         <% @mylink = "/categories/" + e.id.to_s %>
-//                       <% else %>
-//                         <% @mylink = "/categories1/" + e.id.to_s %>
-//                       <% end %><!-- cierre de if -->
-                        
-//                       <div class="col-sm-3">
-//                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-//                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-//                           </a>
-//                       </div>
-//                     <% end %> <!-- cierre de each-do -->
-//                   </div>
-//                   </div><!-- row -->
-//                 </div><!-- container-fluid -->
-//                 </div><!-- cierre de item -->
-//               </div><!-- cierre de item-active -->
-//             </div><!-- cierre de carousel-inner -->
-
-
-
-//          <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-//          <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-//           </div><!-- cierre de carousel -->
-//         </div><!-- cierre de col -->
-//       </div><!-- cierre de row -->
-//     </div><!-- cierre de container -->
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-// <% end %>
-// <% if @categories_curso.first != nil %>
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-//   <div class="container">
-//     <h1>Cursos</h1>
-//     <div class="row">
-//       <div class="col-md-12">
-//         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
-//           <div class="carousel-inner">
-//             <div class="item active">
-//               <div class="item">
-//                 <div class="container-fluid">
-//                   <div class="row">
-//                     <% @categories_curso.first(6).each do |e|%>
-//                       <% if user_signed_in? %>
-//                         <% @mylink = "/categories/" + e.id.to_s %>
-//                       <% else %>
-//                         <% @mylink = "/categories1/" + e.id.to_s %>
-//                       <% end %><!-- cierre de if -->
-                        
-//                       <div class="col-sm-3">
-//                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-//                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-//                           </a>
-//                       </div>
-//                     <% end %> <!-- cierre de each-do -->
-//                   </div>
-//                   </div><!-- row -->
-//                 </div><!-- container-fluid -->
-//                 </div><!-- cierre de item -->
-//               </div><!-- cierre de item-active -->
-//             </div><!-- cierre de carousel-inner -->
-
-
-
-//          <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-//          <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-//           </div><!-- cierre de carousel -->
-//         </div><!-- cierre de col -->
-//       </div><!-- cierre de row -->
-//     </div><!-- cierre de container -->
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-// <% end %>
-// <% if @categories_documental.first != nil %>
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-//   <div class="container">
-//     <h1>Documentales</h1>
-//     <div class="row">
-//       <div class="col-md-12">
-//         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
-//           <div class="carousel-inner">
-//             <div class="item active">
-//               <div class="item">
-//                 <div class="container-fluid">
-//                   <div class="row">
-//                     <% @categories_documental.first(6).each do |e|%>
-//                       <% if user_signed_in? %>
-//                         <% @mylink = "/categories/" + e.id.to_s %>
-//                       <% else %>
-//                         <% @mylink = "/categories1/" + e.id.to_s %>
-//                       <% end %><!-- cierre de if -->
-                        
-//                       <div class="col-sm-3">
-//                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-//                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-//                           </a>
-//                       </div>
-//                     <% end %> <!-- cierre de each-do -->
-//                   </div>
-//                   </div><!-- row -->
-//                 </div><!-- container-fluid -->
-//                 </div><!-- cierre de item -->
-//               </div><!-- cierre de item-active -->
-//             </div><!-- cierre de carousel-inner -->
-
-
-
-//          <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-//          <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-//           </div><!-- cierre de carousel -->
-//         </div><!-- cierre de col -->
-//       </div><!-- cierre de row -->
-//     </div><!-- cierre de container -->
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-// <% end %>
-// <% if @categories_otros.first != nil %>
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-//   <div class="container">
-//     <h1>Otros</h1>
-//     <div class="row">
-//       <div class="col-md-12">
-//         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
-//           <div class="carousel-inner">
-//             <div class="item active">
-//               <div class="item">
-//                 <div class="container-fluid">
-//                   <div class="row">
-//                     <% @categories_otros.first(6).each do |e|%>
-//                       <% if user_signed_in? %>
-//                         <% @mylink = "/categories/" + e.id.to_s %>
-//                       <% else %>
-//                         <% @mylink = "/categories1/" + e.id.to_s %>
-//                       <% end %><!-- cierre de if -->
-                        
-//                       <div class="col-sm-3">
-//                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-//                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-//                           </a>
-//                       </div>
-//                     <% end %> <!-- cierre de each-do -->
-//                   </div>
-//                   </div><!-- row -->
-//                 </div><!-- container-fluid -->
-//                 </div><!-- cierre de item -->
-//               </div><!-- cierre de item-active -->
-//             </div><!-- cierre de carousel-inner -->
-
-
-
-//          <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-//          <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-//           </div><!-- cierre de carousel -->
-//         </div><!-- cierre de col -->
-//       </div><!-- cierre de row -->
-//     </div><!-- cierre de container -->
-// <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
-// <% end %>
-   
-// <!-- javascript -->
-
-// <!-- javascript -->
+.carousel-inner2 .item img {
+  height:300px;
+  width:50%;
+}     
 
 
 
 
-// </div>
 
-// <hr />
-// </body>
-// </html>
+.container-agr {
+    position: relative;
+}
+.image {
+  opacity: 1;
+  display: block;
+  height:300px;
+  width:100%;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+.container-agr:hover .image {
+  opacity: 0.3;
+}
+.container-agr:hover .middle {
+  opacity: 1;
+}
+.text {
+  background-color: blue;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
