Arreglar mensaje del email

--- a/app/views/category_mailer/publication.html.erb
+++ b/app/views/category_mailer/publication.html.erb
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Bienvenido, <%= @user.name %></h1>
-	<p> 	Una persona  quiere realizar  una  publicacion en  tu pagina </p>
-	<p> debes realizar  login como administrador, revisar el contenido </p>   
-	<p> y si lo consideras  bien, darle  una  prioridad y  cambiarle el status a activa </p>  
+	<h2> 	La persona del correo  <%= @user1.email %>  quiere realizar  una  publicacion en  tu pagina </h2>
+	<h2> debes realizar  login como administrador, revisar el contenido y si lo consideras  bien</h2>   
+	<h1>darle  una  prioridad del 0 al 10 y  cambiarle el status a activa </h1>  
   </body>
 </html>
